# anki_concursos_docs

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  Procfile  README.md  alembic.ini  compose.yaml  constraints.txt  eslint.config.js  heroku.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.sublime-project  requirements.sublime-workspace  skills-lock.json  vite.config.ts
.claude/: settings.json
.codex/: config.toml
.playwright-mcp/: page-2026-06-25T03-52-43-028Z.yml  page-2026-06-25T04-05-02-681Z.yml  page-2026-06-25T04-08-57-533Z.yml  page-2026-06-25T05-39-24-159Z.yml  page-2026-06-25T05-42-36-498Z.yml  page-2026-06-25T05-42-59-289Z.yml  page-2026-06-25T05-47-24-328Z.yml  page-2026-06-25T06-09-12-813Z.yml  page-2026-06-25T06-20-27-152Z.yml  page-2026-06-25T06-33-04-964Z.yml  page-2026-06-25T06-33-33-111Z.yml  page-2026-06-25T06-33-57-570Z.yml  page-2026-06-25T06-34-07-326Z.yml  page-2026-06-25T06-38-20-546Z.yml  page-2026-06-25T14-10-28-316Z.yml  page-2026-06-25T14-16-07-107Z.yml  page-2026-06-25T14-21-31-801Z.yml  page-2026-06-25T14-21-51-903Z.yml  page-2026-06-25T14-32-21-597Z.yml  page-2026-06-25T14-41-41-381Z.yml  page-2026-06-25T14-45-30-029Z.yml  page-2026-06-25T15-06-49-669Z.yml  page-2026-06-25T16-00-32-489Z.yml  page-2026-06-25T17-31-30-348Z.yml  page-2026-06-25T17-32-02-868Z.yml  page-2026-06-25T17-38-05-167Z.yml  page-2026-06-25T23-09-18-631Z.yml  page-2026-06-25T23-59-01-392Z.yml  page-2026-06-26T00-02-03-166Z.yml  page-2026-06-26T00-02-13-193Z.yml  page-2026-06-26T00-05-02-953Z.yml  page-2026-06-26T00-05-11-527Z.yml  page-2026-06-26T00-14-50-241Z.yml  page-2026-06-26T00-23-51-490Z.yml  page-2026-06-26T00-35-42-564Z.yml  page-2026-06-26T14-43-48-942Z.yml  page-2026-06-26T14-45-47-800Z.yml  page-2026-06-26T14-58-21-746Z.yml  page-2026-06-26T15-03-53-999Z.yml  page-2026-06-26T15-04-06-620Z.yml  (+11 more)
admin/: .env.example  Dockerfile  (+5 more)
(+247 files in other folders)
