[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-concursos"
version = "0.1.0"
description = "Backend para flashcards versionados de concursos publicos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2",
    "fastapi>=0.115,<1",
    "psycopg[binary]>=3.1,<4",
    "pydantic-settings>=2.2,<3",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "postgres: requires a disposable PostgreSQL database in TEST_DATABASE_URL",
]
